_sass/pages/homepage.scss
#homepage {
    main {
        padding-top: 0;
    }

    .slideshow ul li {
        @extend .img;
        background-size: cover;
        height: 200px;
        margin: 0 -1 * $standard-margin $standard-margin;

        &:nth-child(1) {
            background-image: url('../images/slideshows/homepage/in-front-of-turn-one.jpg');
        }

        &:nth-child(2) {
            background-image: url('../images/slideshows/homepage/cleaning-the-array.jpg');
        }

        &:nth-child(3) {
            background-image: url('../images/slideshows/homepage/racing-away.jpg');
        }

        &:nth-child(4) {
            background-image: url('../images/slideshows/homepage/practice-before-the-race.jpg');
        }
    }

    .intro {
        text-align: center;
        margin: $standard-margin * 2 0;
    }

    .countdown {
        text-align: center;
        margin: 0;
        padding: 0;
    }

    .countdown__part {
        background: #E1E1E1;
        text-transform: capitalize;
        list-style: none;
        padding: $standard-padding;
        margin: 0 $standard-margin $standard-margin 0;

        &:last-of-type {
            margin-bottom: 0;
        }
    }

    .countdown__part__value {
        font-family: courier;
        font-weight: bold;
        display: inline-block;
        margin-right: 10px;
    }

    @include media-query(tablet) {
        .slideshow ul li {
            height: 450px;
            margin: 0 0 $standard-margin * 2;
        }

        .intro {
            text-align: left;
            margin: 0 auto;
        }

        .countdown__container {
            margin: $standard-margin * 2 0 0;
        }

        .countdown__part {
            display: inline-block;
            margin-right: $standard-margin;
            width: 15%;

            &:last-of-type {
                margin: 0;
            }
        }
    }

    @include media-query(desktop) {
        .slideshow ul li {
            height: 550px;
        }

        .countdown {
            float: right;
            margin: 0;
        }

        .countdown__container {
            margin: 3px 0 0 0;
            padding: 0;
        }

        .countdown__part {
            display: inline;
            margin-right: $standard-margin;

            &:last-of-type {
                margin: 0;
            }
        }
    }

    @include media-query(enormous) {
        .slideshow ul li {
            height: 700px;
        }
    }
}

